--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ streamlit
 streamlit_pills
 llama-index==0.9.4
 llama-hub==0.0.44
+# NOTE: this is due to a trivial dependency in the web tool, will refactor
 langchain==0.0.305
