Update requirements.txt (#11)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-streamlit_pills
+streamlit-pills
 llama-index==0.9.4
 llama-hub==0.0.44
 # NOTE: this is due to a trivial dependency in the web tool, will refactor
