Update README.md (#19)
* Update README.md

Fixed small typos in readme.

* Add pypdf in requirements.txt

I get this message "It appears that there is a missing dependency required to read PDF files. You will need to install pypdf to proceed. Please install it by running pip install pypdf in your environment, and let me know once that's done so we can continue with loading the files."

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ llama-index==0.9.4
 llama-hub==0.0.44
 # NOTE: this is due to a trivial dependency in the web tool, will refactor
 langchain==0.0.305
+pypdf
